# Realtime-chat

./: .gitignore  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: auth.py  main.py  models.py  schemas.py  translate.py
